# jm-aelos-sdk

./: README.md  pyproject.toml
examples/: connect.py  list_ports.py
jmaelossdk/: __init__.py  actions.py  commands.py  compiler.py  discovery.py  packaging.py  protocol.py  robot.py  routine.py  types.py
jmaelossdk/routines/: __init__.py  basic.py  combat.py  walk.py
jmaelossdk/routines/basic/: __init__.py  push_up.py
jmaelossdk/routines/combat/: __init__.py
tests/: test_compiler.py  test_packaging.py  test_protocol.py  test_robot_actions.py  test_routines.py
