[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jmaelossdk"
version = "0.1.0"
description = "Personal Python SDK for controlling Aelos robots over serial."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pyserial>=3.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["jmaelossdk*"]
